--- a/rya_mrp_dev_js_it/views/cost_structure_report.xml
+++ b/rya_mrp_dev_js_it/views/cost_structure_report.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <template id="mrp_cost_structure">
+    <template id="index">
         <t t-call="web.basic_layout">
             <t t-call-assets="mrp_account_enterprise.assets_mrp_cost_structure_report" t-js="False"/>
             <div class="page o_mrp_report_page">
-                <t t-if="not lines_rs">
-                    <span class="text-center o_mrp_report_info"><h1>kkk Some of the Manufacturing Order(s) selected are not done yet</h1></span>
+                <t t-if="not lines">
+                    <span class="text-center o_mrp_report_info"><h1>kkks Some of the Manufacturing Order(s) selected are not done yet</h1></span>
                 </t>
                 <t t-else="">
                     <span class="text-left"><h1 class="o_mrp_header o_mrp_header1">Cost Analysis Report</h1></span>
                 </t>
-                <t t-foreach="lines_rst" t-as="line">
+                <t t-foreach="lines_rs" t-as="line">
                     <t t-set="currency" t-value="line['currency']"/>
                     <t t-set="opcost" t-value="0.0"/>
                     <t t-set="tot_scrap_cost" t-value="0.0"/>
@@ -449,5 +449,8 @@
             </div>
         </t>
     </template>
+
+    <template id="indext"
+              inherit_id="rya_mrp_dev_js_it.index" primary="True"/>
 
 </odoo>
