--- a/rya_mrp_dev_js_it/views/cost_structure_report.xml
+++ b/rya_mrp_dev_js_it/views/cost_structure_report.xml
@@ -10,7 +10,7 @@
                 <t t-else="">
                     <span class="text-left"><h1 class="o_mrp_header o_mrp_header1">Cost Analysis Report</h1></span>
                 </t>
-                <t t-foreach="lines_rs" t-as="line">
+                <t t-foreach="lines" t-as="line">
                     <t t-set="currency" t-value="line['currency']"/>
                     <t t-set="opcost" t-value="0.0"/>
                     <t t-set="tot_scrap_cost" t-value="0.0"/>
