--- a/convert_volume_purchase_js_it/views/purchase.xml
+++ b/convert_volume_purchase_js_it/views/purchase.xml
@@ -17,4 +17,19 @@
             </field>
     </record>
 
+
+    <record id="product_tempalte" model="ir.ui.view">
+            <field name="name">product.template</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_only_form_view" />
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='barcode']" position="after">
+                    <field name="is_volume" invisible="1" />
+                    <field name="ratio_kg"
+                           attrs="{'invisible': [('is_volume', '!=', True )]}"
+                           optional="hidden" />
+                </xpath>
+            </field>
+    </record>
+
 </odoo>
