--- a/rya_mrp_dev_js_it/views/mrp_account_view.xml
+++ b/rya_mrp_dev_js_it/views/mrp_account_view.xml
@@ -24,6 +24,9 @@
                         class="oe_stat_button" icon="fa-dollar"
                             string="Costo Analisis Resinas" attrs="{'invisible': [('state', '!=', 'done')]}">
                     </button>
+
+
+                   <button name="calculate_new_cost_rs" type="object" string="UHHH" />
                 </div>
             </field>
         </record>
