--- a/rya_mrp_dev_js_it/views/mrp_account_view.xml
+++ b/rya_mrp_dev_js_it/views/mrp_account_view.xml
@@ -1,33 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <!-- cost structure report -->
-        <record id="action_cost_struct_mrp_production" model="ir.actions.report">
-            <field name="name">Cost Analysis</field>
-            <field name="model">mrp.production</field>
-            <field name="report_type">qweb-html</field>
-            <field name="report_name">rya_mrp_dev_js_it.index</field>
-            <field name="report_file">rya_mrp_dev_js_it.index</field>
-            <field name="print_report_name">'Cost Analysis - %s ' % object.name</field>
-            <field name="binding_model_id" ref="mrp.model_mrp_production"/>
-            <field name="binding_type">report</field>
-        </record>
 
 
-    <record model="ir.ui.view" id="mrp_production_form_inherit_view6">
-            <field name="name">mrp.production.form.inherit</field>
-            <field name="model">mrp.production</field>
-            <field name="inherit_id" ref="mrp.mrp_production_form_view"/>
+
+    <record id="mrp_account_enterprise.mrp_production_form_inherit_view6" model="ir.ui.view">
+            <field name="name">cost_structure_product_product_inherit</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="mrp.product_template_form_view_bom_button"/>
+            <field name="groups_id" eval="[(4, ref('mrp.group_mrp_user'))]"/>
             <field name="arch" type="xml">
-                <div name="button_box" position="inside">
-                    <button name="%(rya_mrp_dev_js_it.action_cost_struct_mrp_production)d" type="action"
-                        class="oe_stat_button" icon="fa-dollar"
-                            string="Costo Analisis Resinas" attrs="{'invisible': [('state', '!=', 'done')]}">
+
+                <xpath expr="//button[@name='action_view_mos']" position="after">
+                    <field name="mrp_product_qty" invisible="1"/>
+                    <!--
+                    <button name="action_cost_structure" type="object"
+                            invisible="1"
+                        class="oe_stat_button" icon="fa-dollar" string="Cost Analysis" attrs="{'invisible': [('mrp_product_qty', '=', 0)]}">
                     </button>
+                    -->
+                </xpath>
 
-
-                   <button name="calculate_new_cost_rs" type="object" string="UHHH" />
-                </div>
             </field>
-        </record>
+    </record>
+
+
 </odoo>
