--- a/rya_mrp_dev_js_it/views/mrp_production.xml
+++ b/rya_mrp_dev_js_it/views/mrp_production.xml
@@ -1,16 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
+     <!-- cost structure report -->
+        <record id="action_cost_struct_mrp_production" model="ir.actions.report">
+            <field name="name">Cost Analysis</field>
+            <field name="model">mrp.production</field>
+            <field name="report_type">qweb-html</field>
+            <field name="report_name">rya_mrp_dev_js_it.index</field>
+            <field name="report_file">rya_mrp_dev_js_it.index</field>
+            <field name="print_report_name">'Cost Analysis - %s ' % object.name</field>
+            <field name="binding_model_id" ref="mrp.model_mrp_production"/>
+            <field name="binding_type">report</field>
+        </record>
     <record id="mrp_production_form" model="ir.ui.view">
             <field name="name">mrp.production</field>
             <field name="model">mrp.production</field>
             <field name="inherit_id" ref="mrp.mrp_production_form_view" />
             <field name="arch" type="xml">
 
+                <xpath expr="//field[@name='move_raw_ids']"
+                       position="attributes">
+                    options="{'delete': [('state', '=', 'draft')]}"
+
+                    <attribute name="options">{
+                        'delete': [('state', '=', 'draft')] ,
+                        'create': 0
+                        }</attribute>
+
+                </xpath>
+
+                <div name="button_box" position="inside">
+                    <field name="mrp_bom_copy" invisible="1" />
+                    <button name="show_list_material" type="object"
+                        class="oe_stat_button" icon="fa-dollar"
+                            string="Lista Material" attrs="{'invisible': [('mrp_bom_copy', '=', False)]}">
+                    </button>
+
+                    <button name="%(rya_mrp_dev_js_it.action_cost_struct_mrp_production)d" type="action"
+                        class="oe_stat_button" icon="fa-dollar"
+                            string="Analisis de Costo" attrs="{'invisible': [('state', '!=', 'done')]}">
+                    </button>
+
+                   <!-- <button name="calculate_new_cost_rs" type="object" string="UHHH" /> -->
+                </div>
+
                 <xpath expr="//field[@name='bom_id']" position="before">
                     <field name="product_qty_origin"  invisible="1"
                            readonly="1" force_save="1" />
                 </xpath>
-                <xpath expr="//notebook/page[@name='components']/field/tree/field[@name='location_id']" position="after">
+                <xpath expr="//field[@name='move_byproduct_ids']/tree/field[@name='cost_share']"
+                       position="after">
+                      <field name="cost_subproducto" optional="show" />
+
+                </xpath>
+                <xpath expr="//notebook/page[@name='components']/field/tree/field[@name='location_id']"
+                       position="after">
                     <field name="solicitud_production" optional="show"/>
                     <field name="raw_material_production_id"  invisible="1" />
                     <field name="empaque_line"
