--- a/rya_mrp_dev_js_it/views/mrp_production.xml
+++ b/rya_mrp_dev_js_it/views/mrp_production.xml
@@ -50,7 +50,9 @@
                 </xpath>
                 <xpath expr="//field[@name='move_byproduct_ids']/tree/field[@name='cost_share']"
                        position="after">
-                      <field name="cost_subproducto" optional="show" />
+                      <field name="cost_subproducto"
+                             domain="[('cost_subproducto','!=',0)]"
+                             optional="show" />
 
                 </xpath>
                 <xpath expr="//notebook/page[@name='components']/field/tree/field[@name='location_id']"
