--- a/preguntas_reclutamiento_demo/views/template.xml
+++ b/preguntas_reclutamiento_demo/views/template.xml
@@ -1,7 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <template id="website_hr_recruitment.apply" >
-        <h1>MODIFICAMOS</h1>
+        <t t-set="additional_title">Apply Job</t>
+
+        <div id="wrap" class="container">
+            <h1 class="text-center mt-2">
+                Job Application Form
+            </h1>
+            <h2 t-if="job" class="text-center text-muted">
+                <span t-field="job.name"/>
+            </h2>
+            <span class="hidden" data-for="hr_recruitment_form" t-att-data-values="{'department_id': job and job.department_id.id or '', 'job_id': job and job.id or ''}"/>
+            <div id="jobs_section">
+                <section id="forms" class="s_website_form" data-vcss="001" data-snippet="s_website_form">
+                    <div class="container">
+                        <form id="hr_recruitment_form" action="/website/form/" method="post" enctype="multipart/form-data" class="o_mark_required" data-mark="*" data-model_name="hr.applicant" data-success-mode="redirect" data-success-page="/job-thank-you" hide-change-model="true">
+                            <div class="s_website_form_rows row s_col_no_bgcolor">
+                                <div class="form-group col-12 s_website_form_field s_website_form_required s_website_form_model_required" data-type="char" data-name="Field">
+                                    <div class="row s_col_no_resize s_col_no_bgcolor">
+                                        <label class="col-form-label col-sm-auto s_website_form_label" style="width: 200px" for="recruitment1">
+                                            <span class="s_website_form_label_content">Your Name</span>
+                                            <span class="s_website_form_mark"> *</span>
+                                        </label>
+                                        <div class="col-sm">
+                                            <input id="recruitment1" type="text" class="form-control s_website_form_input" name="partner_name" required="" data-fill-with="name"/>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group col-12 s_website_form_field s_website_form_required" data-type="email" data-name="Field">
+                                    <div class="row s_col_no_resize s_col_no_bgcolor">
+                                        <label class="col-form-label col-sm-auto s_website_form_label" style="width: 200px" for="recruitment2">
+                                            <span class="s_website_form_label_content">Your Email</span>
+                                            <span class="s_website_form_mark"> *</span>
+                                        </label>
+                                        <div class="col-sm">
+                                            <input id="recruitment2" type="email" class="form-control s_website_form_input" name="email_from" required="" data-fill-with="email"/>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group col-12 s_website_form_field s_website_form_required" data-type="char" data-name="Field">
+                                    <div class="row s_col_no_resize s_col_no_bgcolor">
+                                        <label class="col-form-label col-sm-auto s_website_form_label" style="width: 200px" for="recruitment3">
+                                            <span class="s_website_form_label_content">Your Phone Number</span>
+                                            <span class="s_website_form_mark"> *</span>
+                                        </label>
+                                        <div class="col-sm">
+                                            <input id="recruitment3" type="tel" class="form-control s_website_form_input" name="partner_phone" required="" data-fill-with="phone"/>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group col-12 s_website_form_field" data-type="text" data-name="Field">
+                                    <div class="row s_col_no_resize s_col_no_bgcolor">
+                                        <label class="col-form-label col-sm-auto s_website_form_label" style="width: 200px" for="recruitment4">
+                                            <span class="s_website_form_label_content">Short Introduction</span>
+                                        </label>
+                                        <div class="col-sm">
+                                            <textarea id="recruitment4" class="form-control s_website_form_input" name="description"/>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group col-12 s_website_form_field s_website_form_custom" data-type="binary" data-name="Field">
+                                    <div class="row s_col_no_resize s_col_no_bgcolor">
+                                        <label class="col-form-label col-sm-auto s_website_form_label" style="width: 200px" for="recruitment5">
+                                            <span class="s_website_form_label_content">Resume</span>
+                                        </label>
+                                        <div class="col-sm">
+                                            <input id="recruitment5" type="file" class="form-control s_website_form_input" name="Resume"/>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group col-12 s_website_form_field s_website_form_dnone">
+                                    <div class="row s_col_no_resize s_col_no_bgcolor">
+                                        <label class="col-form-label col-sm-auto s_website_form_label" style="width: 200px" for="recruitment6">
+                                            <span class="s_website_form_label_content">Job</span>
+                                        </label>
+                                        <div class="col-sm">
+                                            <input id="recruitment6" type="hidden" class="form-control s_website_form_input" name="job_id"/>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group col-12 s_website_form_field s_website_form_dnone">
+                                    <div class="row s_col_no_resize s_col_no_bgcolor">
+                                        <label class="col-form-label col-sm-auto s_website_form_label" style="width: 200px" for="recruitment7">
+                                            <span class="s_website_form_label_content">Department</span>
+                                        </label>
+                                        <div class="col-sm">
+                                            <input id="recruitment7" type="hidden" class="form-control s_website_form_input" name="department_id"/>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- renderizar nuestras preguntas  -->
+                                <t t-foreach="job.questions_test" t-as="p" >
+                                    <div class="form-group col-12 s_website_form_field s_website_form_dnone">
+                                    <div class="row s_col_no_resize s_col_no_bgcolor">
+                                        <label class="col-form-label col-sm-auto s_website_form_label" style="width: 200px" for="recruitment7">
+                                            <span class="s_website_form_label_content">
+                                                <t t-esc="p.name" />
+                                            </span>
+                                        </label>
+                                        <div class="col-sm">
+                                            <input  type="text"
+                                                   class="form-control s_website_form_input"
+                                                    t-att-name="'%s' %(p.id)"
+                                            />
+                                        </div>
+                                    </div>
+                                </div>
+
+                                </t>
+
+
+
+
+
+                                <div class="form-group col-12 s_website_form_submit" data-name="Submit Button">
+                                    <div style="width: 200px;" class="s_website_form_label"/>
+                                    <a href="#" role="button" class="btn btn-primary btn-lg s_website_form_send">Submit</a>
+                                    <span id="s_website_form_result"/>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </section>
+            </div>
+            <div class="oe_structure mt-2"/>
+        </div>
 
     </template>
 </odoo>
