--- a/preguntas_reclutamiento_demo/views/template.xml
+++ b/preguntas_reclutamiento_demo/views/template.xml
@@ -14,7 +14,7 @@
             <div id="jobs_section">
                 <section id="forms" class="s_website_form" data-vcss="001" data-snippet="s_website_form">
                     <div class="container">
-                        <form id="hr_recruitment_form" action="/website/form/" method="post" enctype="multipart/form-data" class="o_mark_required" data-mark="*" data-model_name="hr.applicant" data-success-mode="redirect" data-success-page="/job-thank-you" hide-change-model="true">
+                        <form id="hr_recruitment_form" action="/website_form_questions_hr/" method="post" enctype="multipart/form-data" class="o_mark_required" data-mark="*" data-model_name="hr.applicant" data-success-mode="redirect" data-success-page="/job-thank-you" hide-change-model="true">
                             <div class="s_website_form_rows row s_col_no_bgcolor">
                                 <div class="form-group col-12 s_website_form_field s_website_form_required s_website_form_model_required" data-type="char" data-name="Field">
                                     <div class="row s_col_no_resize s_col_no_bgcolor">
@@ -92,8 +92,9 @@
 
                                 <!-- renderizar nuestras preguntas  -->
                                 <t t-foreach="job.questions_test" t-as="p" >
-                                    <div class="form-group col-12 s_website_form_field s_website_form_dnone">
-                                    <div class="row s_col_no_resize s_col_no_bgcolor">
+
+                                    <div class="form-group col-12 s_website_form_field s_website_form_required s_website_form_model_required">
+                                      <div class="row s_col_no_resize s_col_no_bgcolor">
                                         <label class="col-form-label col-sm-auto s_website_form_label" style="width: 200px" for="recruitment7">
                                             <span class="s_website_form_label_content">
                                                 <t t-esc="p.name" />
@@ -105,8 +106,8 @@
                                                     t-att-name="'%s' %(p.id)"
                                             />
                                         </div>
+                                     </div>
                                     </div>
-                                </div>
 
                                 </t>
 
